<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.eightywon.aqtrainer.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/txtStage2Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/stage2Header"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtStage1Body" />

    <TextView
        android:id="@+id/txtStage3Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/stage3Header"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtStage2Body" />

    <TextView
        android:id="@+id/txtStage4Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/stage4Header"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtStage3Body" />

    <TextView
        android:id="@+id/txtStage4Body"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:text="@string/stage3Body"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtStage4Header"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/txtStage4Header" />

    <ImageButton
        android:id="@+id/btnStage4Play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toRightOf="@+id/txtStage4Body"
        app:layout_constraintTop_toTopOf="@+id/txtStage4Body"
        app:srcCompat="@android:drawable/ic_media_play" />

    <TextView
        android:id="@+id/txtStage3Body"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-1dp"
        android:text="@string/stage3Body"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintTop_toBottomOf="@+id/txtStage3Header"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/txtStage3Header" />

    <ImageButton
        android:id="@+id/btnStage3Play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toRightOf="@+id/txtStage3Body"
        app:layout_constraintTop_toTopOf="@+id/txtStage3Body"
        app:srcCompat="@android:drawable/ic_media_play" />

    <TextView
        android:id="@+id/txtStage2Body"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:text="@string/stage2Body"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtStage2Header"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/txtStage2Header" />

    <ImageButton
        android:id="@+id/btnStage2Play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toRightOf="@+id/txtStage2Body"
        app:layout_constraintTop_toTopOf="@+id/txtStage2Body"
        app:srcCompat="@android:drawable/ic_media_play" />

    <TextView
        android:id="@+id/txtStage1Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/stage1header"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.208" />

    <TextView
        android:id="@+id/txtStage1Body"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:text="@string/stage1Body"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtStage1Header"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/txtStage1Header" />

    <ImageButton
        android:id="@+id/btnStage1Play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toRightOf="@+id/txtStage1Body"
        app:layout_constraintTop_toTopOf="@+id/txtStage1Body"
        app:srcCompat="@android:drawable/ic_media_play" />
</android.support.constraint.ConstraintLayout>
